--- a/client/src/index.html
+++ b/client/src/index.html
@@ -1,4 +1,8 @@
 <!doctype html>
+<link href="https://unpkg.com/bootstrap-css-only@4.1.3/css/bootstrap.min.css" rel="stylesheet">
+<link href="https://unpkg.com/font-awesome@4.7.0/css/font-awesome.css" rel="stylesheet">
+<link href="https://unpkg.com/angular-calendar@0.26.6/css/angular-calendar.css" rel="stylesheet">
+<link href="https://unpkg.com/flatpickr@4.5.2/dist/flatpickr.css" rel="stylesheet">
 <html lang="en">
 <head>
   <meta charset="utf-8">
